export const snapshot = {};

snapshot[`parse() > compatibility 1`] = `
{
  ok: true,
  value: {
    name: "⬜タスクリンク",
    raw: "⬜タスクリンク+@2023-09-10",
    start: {
      date: 10,
      month: 9,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > compatibility 2`] = `
{
  ok: true,
  value: {
    name: "✅終了したリンク",
    raw: "✅終了したリンク+@2023-09-10",
    start: {
      date: 10,
      month: 9,
      year: 2023,
    },
    status: "done",
  },
}
`;

snapshot[`parse() > compatibility 3`] = `
{
  ok: true,
  value: {
    name: "📝やり途中のリンク",
    raw: "📝やり途中の+@2023-09-10リンク",
    start: {
      date: 10,
      month: 9,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > compatibility 4`] = `
{
  ok: true,
  value: {
    name: "先頭にない絵文字は✅タスク判定と関係ない",
    raw: "先頭にない絵文字は✅タスク判定と関係ない+@2023-09-10",
    start: {
      date: 10,
      month: 9,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > compatibility 5`] = `undefined`;

snapshot[`parse() 1`] = `
{
  ok: true,
  value: {
    name: "前後の 空白は無視される",
    raw: " 前後の 空白は　+@2023-09-11 無視される　  ",
    start: {
      date: 11,
      month: 9,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > type 1`] = `
{
  ok: true,
  value: {
    name: "ハイウェイ惑星 〆切",
    raw: "!@2002-10-20 ハイウェイ惑星 〆切",
    start: {
      date: 20,
      month: 10,
      year: 2002,
    },
    status: "deadline",
  },
}
`;

snapshot[`parse() > type 2`] = `
{
  ok: true,
  value: {
    name: "ハイウェイ惑星 〆切",
    raw: "ハイウェイ惑星 〆切!4@2002-10-20",
    speed: 4,
    start: {
      date: 20,
      month: 10,
      year: 2002,
    },
    status: "deadline",
  },
}
`;

snapshot[`parse() > type 3`] = `
{
  ok: true,
  value: {
    name: "ハイウェイ惑星 買おう",
    raw: "-@2002-10-20 ハイウェイ惑星 買おう",
    start: {
      date: 20,
      month: 10,
      year: 2002,
    },
    status: "note",
  },
}
`;

snapshot[`parse() > type 4`] = `
{
  ok: true,
  value: {
    name: "ハイウェイ惑星 買おうかな",
    raw: "ハイウェイ惑星 買おうかな~@2023-09-12",
    start: {
      date: 12,
      month: 9,
      year: 2023,
    },
    status: "up-down",
  },
}
`;

snapshot[`parse() > type 5`] = `
{
  ok: true,
  value: {
    name: "ハイウェイ惑星買おう",
    raw: "ハイウェイ惑星+@2002-10-20 買おう",
    start: {
      date: 20,
      month: 10,
      year: 2002,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > type 6`] = `undefined`;

snapshot[`parse() > start datetime 1`] = `
{
  ok: true,
  value: {
    name: "ごはんを食べる",
    raw: "ごはんを食べる+3@2023-04-30",
    speed: 3,
    start: {
      date: 30,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > start datetime 2`] = `undefined`;

snapshot[`parse() > start datetime 3`] = `undefined`;

snapshot[`parse() > start datetime 4`] = `
{
  ok: true,
  value: {
    name: "ごはんを食べる",
    raw: "ごはんを食べる+3@2023-04-30T12:23",
    speed: 3,
    start: {
      date: 30,
      hours: 12,
      minutes: 23,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > start datetime 5`] = `
{
  ok: true,
  value: {
    name: "ごはんを食べる:45 ※秒は無視する",
    raw: "ごはんを食べる+3@2023-04-30T12:23:45 ※秒は無視する",
    speed: 3,
    start: {
      date: 30,
      hours: 12,
      minutes: 23,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > start datetime 6`] = `
{
  ok: true,
  value: {
    name: "ごはんを食べる12:23:※区切り文字が必要",
    raw: "ごはんを食べる+3@2023-04-30 12:23:※区切り文字が必要",
    speed: 3,
    start: {
      date: 30,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 1`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      month: 4,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13/23D45",
    speed: 3,
    start: {
      date: 13,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 2`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      month: 5,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13/05-23D45",
    speed: 3,
    start: {
      date: 13,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 3`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      month: 5,
      year: 2024,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13/2024-05-23D45",
    speed: 3,
    start: {
      date: 13,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 4`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      hours: 5,
      minutes: 47,
      month: 5,
      year: 2024,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13/2024-05-23T05:47D45",
    speed: 3,
    start: {
      date: 13,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 5`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      hours: 5,
      minutes: 47,
      month: 5,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13/05-23T05:47D45",
    speed: 3,
    start: {
      date: 13,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 6`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      hours: 5,
      minutes: 47,
      month: 4,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13/23T05:47D45",
    speed: 3,
    start: {
      date: 13,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 7`] = `
{
  ok: true,
  value: {
    name: "ごはんを食べる/T05:47D45",
    raw: "ごはんを食べる+3@2023-04-13/T05:47D45",
    speed: 3,
    start: {
      date: 13,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 8`] = `
{
  ok: true,
  value: {
    end: {
      date: 13,
      hours: 5,
      minutes: 47,
      month: 4,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13/05:47D45",
    speed: 3,
    start: {
      date: 13,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 9`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      month: 4,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13T13:40/23D45",
    speed: 3,
    start: {
      date: 13,
      hours: 13,
      minutes: 40,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 10`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      month: 5,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13T13:40/05-23D45",
    speed: 3,
    start: {
      date: 13,
      hours: 13,
      minutes: 40,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 11`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      month: 5,
      year: 2025,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13T13:40/2025-05-23D45",
    speed: 3,
    start: {
      date: 13,
      hours: 13,
      minutes: 40,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 12`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      hours: 5,
      minutes: 47,
      month: 5,
      year: 2025,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13T13:40/2025-05-23T05:47D45",
    speed: 3,
    start: {
      date: 13,
      hours: 13,
      minutes: 40,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 13`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      hours: 5,
      minutes: 47,
      month: 5,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13T13:40/05-23T05:47D45",
    speed: 3,
    start: {
      date: 13,
      hours: 13,
      minutes: 40,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 14`] = `
{
  ok: true,
  value: {
    end: {
      date: 23,
      hours: 5,
      minutes: 47,
      month: 4,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13T13:40/23T05:47D45",
    speed: 3,
    start: {
      date: 13,
      hours: 13,
      minutes: 40,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 15`] = `
{
  ok: true,
  value: {
    name: "ごはんを食べる/T05:47D45",
    raw: "ごはんを食べる+3@2023-04-13T13:40/T05:47D45",
    speed: 3,
    start: {
      date: 13,
      hours: 13,
      minutes: 40,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 16`] = `
{
  ok: true,
  value: {
    end: {
      date: 13,
      hours: 14,
      minutes: 47,
      month: 4,
      year: 2023,
    },
    name: "ごはんを食べるD45",
    raw: "ごはんを食べる+3@2023-04-13T13:40/14:47D45",
    speed: 3,
    start: {
      date: 13,
      hours: 13,
      minutes: 40,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > end datetime 17`] = `
{
  ok: true,
  value: {
    duration: 45,
    name: "ごはんを食べる/05:47",
    raw: "ごはんを食べる+3@2023-04-13D45/05:47",
    speed: 3,
    start: {
      date: 13,
      month: 4,
      year: 2023,
    },
    status: "todo",
  },
}
`;

snapshot[`parse() > errors 1`] = `
{
  ok: false,
  value: {
    message: "The start of an task cannot be after its end.

start:2023-04-30
end:2023-04-23",
    name: "TaskRangeError",
  },
}
`;

snapshot[`parse() > errors 2`] = `
{
  ok: false,
  value: {
    message: 'The start of the task "2023-04-33" is an invalid date.',
    name: "InvalidDateError",
  },
}
`;

snapshot[`parse() > errors 3`] = `
{
  ok: false,
  value: {
    message: 'The end of the task "2023-04-13T05:67" is an invalid date.',
    name: "InvalidDateError",
  },
}
`;
